# butterfly

./: dev-requirements.txt  pyproject.toml
butterfly/: __init__.py  aoa.py  blockMeshDict.py  boundaryRadiationProperties.py  case.py  fields.py  foamfile.py  fvSolution.py  g_radiation.py  geometry.py  gradingutil.py  idefault.py  omega.py  parser.py  qr.py  snappyHexMeshDict.py  solution.py  utilities.py
butterfly/stl/: __init__.py  ascii.py  binary.py
etc/resources/SolvingTheCase/fvSolution/: fvSolution
